--- a/main.html
+++ b/main.html
@@ -7,6 +7,35 @@
 </head>
 
 <body>
+   <form method="post">
+		<Label for ="name">Name</Label>
+		<input type="text" id ="name" placeholder="Name"required>
+	    <br>
+		<Label for ="phone">Phone Number</Label>
+		<input type="text" id ="phone" placeholder="Phone Number">
+		
+	   <br>
+	   <Label for ="address">Address</Label>
+		<input type="text" id ="address" placeholder="Address">
+	   <br>
+	   <Label for ="checkbox">Have you ever lived with a Dog before?</Label>
+	   <input type="checkbox" id ="checkbox">
+	   <br>
+    	<label for= "multiselect">Please select your preferred breeds</label>
+		<select id="cars">
+			<option value ="german shephard">german shephard</option>
+				<option value ="chiwawa">chiwawa</option>
+			<option value ="golden retriever">golden retriever</option>
+		</select>
+		<br>
+	   <button type="submit">Submit</button>
+
+
+	</form>
+
+
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
