--- a/main.html
+++ b/main.html
@@ -19,16 +19,16 @@
 		<input type="text" id ="address" placeholder="Address">
 	   <br>
 	   <Label for ="checkbox">Have you ever lived with a Dog before?</Label>
-	   <input type="checkbox" id ="checkbox">
+	   <input type="checkbox" value ="Have you ever lived with a Dog before?"id ="checkbox">
 	   <br>
     	<label for= "multiselect">Please select your preferred breeds</label>
-		<select id="cars">
+		<select id="multiselect">
 			<option value ="german shephard">german shephard</option>
 				<option value ="chiwawa">chiwawa</option>
 			<option value ="golden retriever">golden retriever</option>
 		</select>
 		<br>
-	   <button type="submit">Submit</button>
+	   <button type="submit" value="Submit">Submit</button>
 
 
 	</form>
