--- a/main.html
+++ b/main.html
@@ -21,14 +21,14 @@
 	   <Label for ="checkbox">Have you ever lived with a Dog before?</Label>
 	   <input type="checkbox" value ="Have you ever lived with a Dog before?"id ="checkbox">
 	   <br>
-    	<label for= "multiselect">Please select your preferred breeds</label>
-		<select id="multiselect">
+    	<label for= "multiSelect">Please select your preferred breeds</label>
+		<select id="multiSelect">
 			<option value ="german shephard">german shephard</option>
 				<option value ="chiwawa">chiwawa</option>
 			<option value ="golden retriever">golden retriever</option>
 		</select>
 		<br>
-	   <button type="submit" value="Submit">Submit</button>
+	   <button type="submit" value="submit">Submit</button>
 
 
 	</form>
