--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 			<option value ="golden retriever">golden retriever</option>
 		</select>
 		<br>
-	   <button type="submit" id="submit">Submit</button>
+	   <button type="submit" value="Submit" id="submit">Submit</button>
 
 
 	</form>
