--- a/main.html
+++ b/main.html
@@ -28,7 +28,8 @@
 			<option value ="golden retriever">golden retriever</option>
 		</select>
 		<br>
-	   <button type="submit" value="Submit" id="submit">Submit</button>
+	<button type="submit" value="submit">Submit</button>
+
 
 
 	</form>
