--- a/main.html
+++ b/main.html
@@ -7,26 +7,36 @@
 </head>
 
 <body>
-	<h1>Dog Adoption Application</h1>
-	<form method="post">
-		<label for="name"></label>
-		<input type="text"  name="name" placeholder="Name" required>
-		<label for="phone"></label>
-		<input type="text" name="Phone Number" placeholder="Phone Number" id="phone" required>
-		<label for="adress"></label>
-		<input type="text" name="Address" id="address" placeholder="Address" required>
-		<label for ="checkbox">Have you lived with a Dog before?</label>
-		<input type ="checkbox"  id="checkbox" value=">Have you ever lived with a Dog before?" >
-		<label id="multiSelect">Please select your preferred breeds</label>
-		<select id="multiSelect">
-			<option value="">Select</option>
-		<option vlaue="pitbull">Pitbull</option>
-		<option value="Sibairn">sibairn</option>
-		<option value="German Shafferd">German Shafferd</option>
-		</select>
-		<button type="submit" value="submit">Submit</button>
-			</form>
+   <form method="post">
+		<Label for ="name">Name</Label>
+		<input type="text" id ="name" placeholder="Name"required>
+	    <br>
+		<Label for ="phone">Phone Number</Label>
+		<input type="text" id ="phone" placeholder="Phone Number">
 		
+	   <br>
+	   <Label for ="address">Address</Label>
+		<input type="text" id ="address" placeholder="Address">
+	   <br>
+	   <Label for ="checkbox">Have you ever lived with a Dog before?</Label>
+	   <input type="checkbox" value ="Have you ever lived with a Dog before?"id ="checkbox">
+	   <br>
+    	<label for= "multiSelect">Please select your preferred breeds</label>
+		<select id="multiSelect">
+			<option value ="german shephard">german shephard</option>
+				<option value ="chiwawa">chiwawa</option>
+			<option value ="golden retriever">golden retriever</option>
+		</select>
+		<br>
+	<button type="submit" value="submit">Submit</button>
+
+
+
+	</form>
+
+
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
