--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 			<option value ="golden retriever">golden retriever</option>
 		</select>
 		<br>
-	<button type="submit" value="submit">Submit</button>
+		<input type="submit" id="submit" value="Submit">
 
 
 
